# MovieousShortVideo-Android-Release

./: .gitignore  LICENSE  README.en-us.md  README.md
ReleaseNote/: release-notes-2.0.0.md  (+19 more)
demo/: README.md
demo/Movieous/STMobileJNI/: .gitignore  .project  CMakeLists.txt  build.gradle
demo/Movieous/STMobileJNI/src/main/: AndroidManifest.xml
demo/Movieous/STMobileJNI/src/main/java/com/sensetime/stmobile/: STBeautifyNative.java  STBeautyParamsType.java  STCommon.java  STFilterParamsType.java  STHumanActionParamsType.java  STMobileAuthentificationNative.java  STMobileFaceAttributeNative.java  STMobileFilterNative.java  STMobileHumanActionNative.java  STMobileObjectTrackNative.java  STMobileStickerNative.java  STMobileStreamFilterNative.java  STRotateType.java  STSoundPlay.java
demo/Movieous/STMobileJNI/src/main/jni/: jvmutil.cpp  jvmutil.h  stmobile_authentification_jni.cpp  stmobile_beautify_jni.cpp  stmobile_common_jni.cpp  stmobile_face_attribute_jni.cpp  stmobile_filter_jni.cpp  stmobile_humanaction_jni.cpp  stmobile_object_jni.cpp  stmobile_sound_play_jni.cpp  stmobile_sound_play_jni.h  stmobile_sticker_jni.cpp  stmobile_streamfilter_jni.cpp  utils.cpp  utils.h
demo/Movieous/STMobileJNI/src/main/jni/prebuilt/include/: st_mobile_beautify.h  st_mobile_common.h  st_mobile_face_attribute.h  st_mobile_filter.h  st_mobile_human_action.h  st_mobile_license.h  st_mobile_sticker.h  st_mobile_sticker_module.h  st_mobile_sticker_transition.h
demo/Movieous/STMobileJNI/src/main/jni/prebuilt/lib/: VERSION
demo/Movieous/STMobileJNI/src/main/res/values/: strings.xml
(+339 files in other folders)
